# langclaw

./: .gitignore  README.md  config.yaml  demo_db_history.py  langclaw.sqlite  langgrph.json  openclaw-langgraph_agent_b02a5f5a.plan.md  pyproject.toml  pyrightconfig.json  run.py  run_a2a.py  run_telegram.py  test_agent.py  test_rag.py
deepClaw/: __init__.py  agent.py  subagents.py  tools.py
docs/: agent.md
rag_fixtures/: sample.md
skills/example/: SKILL.md
src/langclaw/: __init__.py  run.py
src/langclaw/a2a/: __init__.py  app.py  card.py  executor.py
src/langclaw/channels/: __init__.py  base.py  telegram.py
src/langclaw/config/: __init__.py  loader.py
src/langclaw/memory/: __init__.py  sqlite.py
src/langclaw/models/: __init__.py  providers.py
src/langclaw/rag/: __init__.py  embeddings.py  store.py
src/langclaw/runtime/: __init__.py  graph.py
src/langclaw/tools/: __init__.py  a2a_client.py  a2a_peers.py  builtin.py  mcp_loader.py  registry.py  skills.py
tests/: test_a2a.py  test_builtin_tools.py  test_config_loader.py  test_models_providers.py  test_rag_store.py  test_skills.py  test_tool_registry.py
